--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,5 +1,16 @@
 {
-    "navigationFallback": {
-        "rewrite": "/index.html"
+  "routes": [
+    {
+      "route": "/anonymous/*",
+      "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/authenticated/*",
+      "allowedRoles": ["authenticated"]
+    },
+    {
+      "route": "/custom/*",
+      "allowedRoles": ["custom"]
     }
+  ]
 }
